# quasar

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  compile.Dockerfile  project.godot  quasar.jpg.import
engine/: Cargo.toml
engine/examples/: colors.rs  triangle.rs
engine/src/: engine.rs  lib.rs  painter.rs
engine/src/drawing/: engine.rs  hardware.rs  mod.rs  painter.rs  renderer.rs  screen.rs
engine/src/world/: coordinates.rs  mod.rs  object.rs  world.rs
quasar/: Cargo.toml
quasar/src/: graphics.rs  main.rs
scenes/: System.tscn
src/: engine.rs  main.rs
