[package]
name = "quasar"
version = "0.1.0"
edition = "2021"

[dependencies]
quasar-engine = { path = "../engine" }
image = "0.24"
log = "0.4.17"
simple_logger = "2.1.0"

# Vulkan library
# Currently, the project is essentially a collection of examples.
# In the future, the main crate will only depend on the other sub-crates, but will not call any Vulkan API directly.
vulkano = "0.28.0"
vulkano-win = "0.28.0"
vulkano-shaders = "0.28.0"
winit = "0.26"
